# My-MPrpc

./: CMakeLists.txt  README.md
example/: test.conf  user.proto
example/callee/: CMakeLists.txt  friendservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.hpp  mprpcapplication.h  mprpcconfig.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  mprpcchannel.h  mprpccontroller.h  mprpcprovider.h  zookeeperutil.h
test/protobuf/: test.proto
